style: correct spacing for nav

--- a/src/components/topnav/topnav.scss
+++ b/src/components/topnav/topnav.scss
@@ -13,5 +13,6 @@
         padding: 10px 30px;
         display: flex;
         align-items: center;
+        justify-content: space-between;
     }
 }
